<resources>
    <string name="app_name">Solve Case</string>
    <string name="jiit_solutions">Jiit Solutions</string>
    <string name="logo">logo</string>
    <string name="a_joint_effort_for_students">A joint effort for students...</string>
    <string name="by_students">by students</string>
    <string-array name="spinner_items">
        <item>Item 1</item>
        <item>Item 1</item>
        <item>Item 1</item>
        <item>Item 1</item>
        <item>Item 1</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="SignUp">Sign Up</string>
    <string name="logo4">Logo</string>
    <string name="web_client_id">xxxxxxxx..place your web client id here</string>
    <string name="other_sign_in_options">Other Sign-in Options</string>
    <string name="admob_app_id">ca-app-pub-3032703257692497~5775345050</string>
    <string name="title_activity_second_year_subjects_new">SecondYearSubjectsNew</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
