<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#031C32"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <ImageButton
        android:id="@+id/logo"
        android:layout_width="101dp"
        android:layout_height="105dp"
android:background="@drawable/custom_logo"
        android:contentDescription="@string/logo"
        android:src="@drawable/ic_solvecaselogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.457">

    </ImageButton>

        <TextView
            android:layout_width="144dp"
            android:layout_height="match_parent"
            android:ellipsize="none"
            android:gravity="center"
            android:scrollHorizontally="false"
            android:text="Solve Case                    U name it, We have it"
            android:textColor="#ffffff"
            android:textSize="14dp">

        </TextView>

    </LinearLayout>
    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/a_joint_effort_for_students"
        android:textAlignment="center"
        android:textColor="#F6F4F3"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.808">

    </TextView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/by_students"
        android:textAlignment="center"
        android:textColor="#F6F4F3"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.844" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="0dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="581dp" />

</androidx.constraintlayout.widget.ConstraintLayout>